# skyboxDemo0229

./: CMakeLists.txt  README.md
includes/Utils/: animation.h  animator.h  bone.h  camera.h  filesystem.h  mesh.h  model.h  model_animation.h  shader.h
includes/learnopengl/: shader.h
resources/objects/: teaport.mtl
src/6.pbr/2.1.2.ibl_irradiance/: 2.1.2.pbr.fs  compute_brightest.cs  find_brightest.compute  ibl_irradiance.cpp
src/6.pbr/2.2.2.ibl_specular_textured/: ibl_specular_textured.cpp
src/skyboxDemo/: 2.1.2.pbr.fs  background.fs  background.vs  brdf.fs  ibl_irradiance.cpp  main.cpp  otsu_threshold.compute  pbr.fs  prefilter.fs
